--- a/package.json
+++ b/package.json
@@ -26,16 +26,15 @@
     "babel-plugin-transform-async-functions": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.2",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "controlkit": "^0.1.9",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "json-loader": "^0.5.4",
     "normalize.css": "^7.0.0",
