--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/blacktoooth/vz#readme",
   "dependencies": {
+    "animejs": "^2.0.2",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.0",
@@ -28,6 +29,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "chance": "^1.0.10",
     "controlkit": "^0.1.9",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.0",
@@ -36,6 +38,7 @@
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "immutable": "^3.8.1",
     "json-loader": "^0.5.4",
     "normalize.css": "^7.0.0",
     "postcss": "^6.0.3",
@@ -47,9 +50,12 @@
     "postcss-nested": "^2.0.2",
     "postcss-reporter": "^4.0.0",
     "postcss-url": "^7.0.0",
+    "postprocessing": "^2.2.0",
     "rxjs": "^5.4.1",
+    "stats.js": "^0.17.0",
     "style-loader": "^0.18.2",
     "three": "^0.86.0",
+    "tinycolor2": "^1.4.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-hot-middleware": "^2.18.0"
